Adding cartesian product alert

--- a/finding-your-inner-spark/geo-collaboration-network.ipynb
+++ b/finding-your-inner-spark/geo-collaboration-network.ipynb
@@ -247,7 +247,7 @@
    "metadata": {},
    "source": [
     "## Finally we have to compute our links\n",
-    "Let's do a self join and then let's try to compute the intesection of pmids, after that we just need to filter for those rows with a intersection with at least one element. ****Hint:*** Check the function [```array_intersect```](https://spark.apache.org/docs/latest/api/python/pyspark.sql.html?#pyspark.sql.functions.array_intersect). Also check the [```alias```](https://spark.apache.org/docs/latest/api/python/pyspark.sql.html?highlight=alias#pyspark.sql.DataFrame.alias). Also, use the [```col```](https://spark.apache.org/docs/latest/api/python/pyspark.sql.html?highlight=alias#pyspark.sql.functions) function to access your columns this time. You'll probably want to do a left join and not a full join ***CARTESIAN PRODUCT ALERT ***"
+    "Let's do a self join and then let's try to compute the intesection of pmids, after that we just need to filter for those rows with a intersection with at least one element. ****Hint:*** Check the function [```array_intersect```](https://spark.apache.org/docs/latest/api/python/pyspark.sql.html?#pyspark.sql.functions.array_intersect). Also check the [```alias```](https://spark.apache.org/docs/latest/api/python/pyspark.sql.html?highlight=alias#pyspark.sql.DataFrame.alias). Also, use the [```col```](https://spark.apache.org/docs/latest/api/python/pyspark.sql.html?highlight=alias#pyspark.sql.functions) function to access your columns this time. You'll probably want to do a left join and not a full join ***CARTESIAN PRODUCT ALERT ☠️***"
    ]
   },
   {
